<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/clRoot"
    tools:context=".sign_up.SignUpActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114">

        <EditText
            android:id="@+id/edtEmailId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/button_rectangle_black_border"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textAlignment="center"
            android:textSize="24sp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="39dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3"
        app:layout_constraintVertical_bias="0.018">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/button_rectangle_black_border"
            android:gravity="center"
            android:hint="@string/name"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="24sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4"
        app:layout_constraintVertical_bias="0.117">

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/button_rectangle_black_border"
            android:gravity="center"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textAlignment="center"
            android:textSize="24sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout6"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="58dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout5"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/button_rectangle_black_border"
            android:gravity="center"
            android:inputType="text"
            android:hint="@string/confirm_password"
            android:textAlignment="center"
            android:textSize="24sp" />
    </RelativeLayout>


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_color_shape"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:onClick="signUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout6" />

</androidx.constraintlayout.widget.ConstraintLayout>